petits ajustements pour twitter (ini exemple) et css réduction de l'opacité du black_block)

--- a/data/config.exemple.ini
+++ b/data/config.exemple.ini
@@ -3,10 +3,10 @@ iftMakerKey = ""
 iftRebusChannel = "rebus_commence"
 
 ; codes pour l'API twitter
-twitterConsumerKey = ''
-twitterConsumerSecret = ''
-twitterAccessToken = ''
-twitterAccessTokenSecret = ''
+twitterConsumerKey = ""
+twitterConsumerSecret = ""
+twitterAccessToken = ""
+twitterAccessTokenSecret = ""
 twitterUtiliserApi = 0
 
 ; miniature du stream sur twitch
@@ -14,3 +14,6 @@ url_miniature_stream = "https://static-cdn.jtvnw.net/previews-ttv/live_user_twit
 
 ; nombre d'écrans différents
 Nscreens = 2
+
+; messages twitter
+messages_twitter[] = "Vené sur mon strime s'il vou plé ! https://www.twitch.tv/monstreamàmoi"
