noms de configurations un peu plus cohérents et config du <title>

--- a/data/config.exemple.ini
+++ b/data/config.exemple.ini
@@ -1,6 +1,6 @@
 ; codes pour IFTTT pour utiliser twitter
-iftMakerKey = ""
-iftRebusChannel = "rebus_commence"
+twitterIftMakerKey = ""
+twitterIftChannel = "rebus_commence"
 
 ; codes pour l'API twitter
 twitterConsumerKey = ""
@@ -16,4 +16,7 @@ url_miniature_stream = "https://static-cdn.jtvnw.net/previews-ttv/live_user_twit
 Nscreens = 2
 
 ; messages twitter
-messages_twitter[] = "Vené sur mon strime s'il vou plé ! https://www.twitch.tv/monstreamàmoi"
+twitterMessages[] = "Vené sur mon strime s'il vou plé ! https://www.twitch.tv/monstreamàmoi"
+
+; titre html de la page gestion (<title>)
+html_title_gestion = "Les écrans de twitch"
