--- a/data/config.exemple.ini
+++ b/data/config.exemple.ini
@@ -12,8 +12,8 @@ twitterUtiliserApi = 0
 ; miniature du stream sur twitch
 url_miniature_stream = "https://static-cdn.jtvnw.net/previews-ttv/live_user_twitchplayspokemon-320x180.jpg"
 
-; nombre d'écrans différents
-Nscreens = 2
+; nombre d'images affichées simultanément maximum
+;max_images = 16
 
 ; messages twitter
 twitterMessages[] = "Vené sur mon strime s'il vou plé ! https://www.twitch.tv/monstreamàmoi"
