ajout d'un calc_score dans le fichier ini exemple

--- a/data/config.exemple.ini
+++ b/data/config.exemple.ini
@@ -20,3 +20,7 @@ twitterMessages[] = "Vené sur mon strime s'il vou plé ! https://www.twitch.tv/
 
 ; titre html de la page gestion (<title>)
 html_title_gestion = "Les écrans de twitch"
+
+; calcul du score (expression mathématique javascript fonction de time dans une string)
+; s'il n'est pas défini, le nombre de minutes est affiché
+;calc_score = "1 + time / 2"
